--- a/PollSystem/pom.xml
+++ b/PollSystem/pom.xml
@@ -65,6 +65,7 @@
 
 	<build>
 		<plugins>
+		<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
